[package]
name = "simsearch-parse-cities"
version = "0.1.0"
authors = ["Evgeniy Tatarkin <tatarkin.evg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = {version = "1.0.125", features = ["derive"] }

# simsearch = "0.2.2"
simsearch = { git = "https://github.com/estin/simsearch-rs" }
